Add cross build capabilities for several spark version