@@ -1,16 +1,31 @@
-// BUILD SETUP
+// ════════════════════════════════════════════════════════════════════════════
+//  BUILD SETUP — all version-coupled values come from SparkProfiles
+//  See: project/SparkProfiles.scala (the single source of truth)
+// ════════════════════════════════════════════════════════════════════════════
+
+val spark = SparkProfiles.active
+
 ThisBuild / organization := "com.amadeus.dataio"
 ThisBuild / versionScheme := Some("early-semver")
-ThisBuild / scalaVersion := "2.12.15"
+ThisBuild / scalaVersion := spark.scalaVersion
+ThisBuild / javacOptions ++= Seq("-source", spark.javaTarget, "-target", spark.javaTarget)
+ThisBuild / scalacOptions += "-deprecation"
 
-val scalatestVersion      = "3.2.15"
-val scalamockVersion      = "5.2.0"
-val sparkVersion          = "3.5.0"
-val typesafeConfigVersion = "1.4.3"
-val slf4jApiVersion       = "2.0.7"
-val commonsIoVersion      = "2.13.0"
+ThisBuild / Test / javaOptions ++= Seq(
+  "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
+)
+// Required for javaOptions to take effect with forked JVM
+ThisBuild / Test / fork := true
 
-// RELEASE SETUP
+// ════════════════════════════════════════════════════════════════════════════
+//  RELEASE SETUP
+// ════════════════════════════════════════════════════════════════════════════
+
 import sbt.Keys.libraryDependencies
 import sbtrelease.ReleaseStateTransformations.*
 
@@ -18,11 +33,11 @@ def getReleaseVersion(ver: String, bumpType: String): String = {
   val pattern = """(\d+)\.(\d+)\.(\d+)-(spark[\d.]+)-SNAPSHOT""".r
 
   ver match {
-    case pattern(major, minor, patch, sparkVersion) =>
+    case pattern(major, minor, patch, sparkTag) =>
       bumpType match {
-        case "MAJOR" => s"${major.toInt + 1}.0.0-$sparkVersion"
-        case "MINOR" => s"$major.${minor.toInt + 1}.0-$sparkVersion"
-        case "PATCH" => s"$major.$minor.$patch-$sparkVersion"
+        case "MAJOR" => s"${major.toInt + 1}.0.0-$sparkTag"
+        case "MINOR" => s"$major.${minor.toInt + 1}.0-$sparkTag"
+        case "PATCH" => s"$major.$minor.$patch-$sparkTag"
         case _       => sys.error(s"Invalid RELEASE_TYPE: $bumpType")
       }
     case _ => sys.error(s"Invalid version format: $ver")
@@ -33,8 +48,8 @@ def getReleaseNextVersion(ver: String): String = {
   val pattern = """(\d+)\.(\d+)\.(\d+)-(spark[\d.]+)""".r
 
   ver match {
-    case pattern(major, minor, patch, sparkVersion) =>
-      s"$major.$minor.${patch.toInt + 1}-$sparkVersion-SNAPSHOT"
+    case pattern(major, minor, patch, sparkTag) =>
+      s"$major.$minor.${patch.toInt + 1}-$sparkTag-SNAPSHOT"
     case _ => sys.error(s"Invalid version format: $ver")
   }
 }
@@ -55,7 +70,10 @@ ThisBuild / releaseProcess := Seq[ReleaseStep](
   pushChanges                // Push everything to Git
 )
 
-// Global GitHub Packages settings
+// ════════════════════════════════════════════════════════════════════════════
+//  PUBLISHING SETUP — GitHub Packages
+// ════════════════════════════════════════════════════════════════════════════
+
 ThisBuild / credentials += Credentials(
   "GitHub Package Registry",
   "maven.pkg.github.com",
@@ -70,7 +88,6 @@ ThisBuild / publishTo := Some(
 // ThisBuild / publishTo := Some(Resolver.file("local-maven", file(Path.userHome.absolutePath + "/.m2/repository")))
 
 ThisBuild / publishMavenStyle := true
-// Additional Maven metadata
 ThisBuild / pomIncludeRepository := { _ => false }
 ThisBuild / pomExtra :=
   <url>https://github.com/AmadeusITGroup/dataio-framework</url>
@@ -81,20 +98,30 @@ ThisBuild / pomExtra :=
       </license>
     </licenses>
 
-// TESTS SETUP
+// ════════════════════════════════════════════════════════════════════════════
+//  TESTS SETUP
+// ════════════════════════════════════════════════════════════════════════════
+
 ThisBuild / Test / parallelExecution := false
 ThisBuild / Test / publishArtifact := false
 
-// PROJECTS SETUP
+// ════════════════════════════════════════════════════════════════════════════
+//  SHARED DEPENDENCIES (driven by SparkProfiles)
+// ════════════════════════════════════════════════════════════════════════════
+
 lazy val commonSettings = Seq(
   libraryDependencies ++= Seq(
-    "org.apache.spark" %% "spark-sql"  % sparkVersion,
-    "org.apache.spark" %% "spark-core" % sparkVersion,
-    "com.typesafe"      % "config"     % typesafeConfigVersion,
-    "org.scalatest"    %% "scalatest"  % scalatestVersion % Test,
-    "org.scalamock"    %% "scalamock"  % scalamockVersion % Test
+    "org.apache.spark" %% "spark-sql"  % spark.sparkVersion,
+    "org.apache.spark" %% "spark-core" % spark.sparkVersion,
+    "com.typesafe"      % "config"     % spark.typesafeConfigVersion,
+    "org.scalatest"    %% "scalatest"  % spark.scalatestVersion % Test,
+    "org.scalamock"    %% "scalamock"  % spark.scalamockVersion % Test
   )
 )
+
+// ════════════════════════════════════════════════════════════════════════════
+//  PROJECTS
+// ════════════════════════════════════════════════════════════════════════════
 
 /** Shared traits and functions for testing inside Data I/O sub projects.
   * It should not be published, and only be used in the Data I/O project itself.
@@ -103,11 +130,11 @@ lazy val commonSettings = Seq(
 lazy val testutils = (project in file("testutils"))
   .settings(
     libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-sql"  % sparkVersion,
-      "org.apache.spark" %% "spark-core" % sparkVersion,
-      "com.typesafe"      % "config"     % typesafeConfigVersion,
-      "org.scalatest"    %% "scalatest"  % scalatestVersion,
-      "org.scalamock"    %% "scalamock"  % scalamockVersion
+      "org.apache.spark" %% "spark-sql"  % spark.sparkVersion,
+      "org.apache.spark" %% "spark-core" % spark.sparkVersion,
+      "com.typesafe"      % "config"     % spark.typesafeConfigVersion,
+      "org.scalatest"    %% "scalatest"  % spark.scalatestVersion,
+      "org.scalamock"    %% "scalamock"  % spark.scalamockVersion
     ),
     publish / skip := true
   )
@@ -117,9 +144,10 @@ lazy val core = (project in file("core"))
     commonSettings,
     name := "dataio-core",
     libraryDependencies ++= Seq(
-      "org.slf4j"  % "slf4j-api"  % slf4jApiVersion,
-      "commons-io" % "commons-io" % commonsIoVersion
-    )
+      "org.slf4j"  % "slf4j-api"  % spark.slf4jApiVersion,
+      "commons-io" % "commons-io" % spark.commonsIoVersion
+    ),
+    Test / baseDirectory := (ThisBuild / baseDirectory).value // <-- fix CWD for forked JVM
   )
   .dependsOn(testutils % Test)
 
@@ -128,20 +156,26 @@ lazy val kafka = (project in file("kafka"))
     commonSettings,
     name := "dataio-kafka",
     libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-sql-kafka-0-10" % sparkVersion,
-      "io.github.embeddedkafka" %% "embedded-kafka" % "3.5.1" % Test,
-      "io.github.embeddedkafka" %% "embedded-kafka-streams" % "3.5.1" % Test
-    )
+      "org.apache.spark"        %% "spark-sql-kafka-0-10"   % spark.sparkVersion,
+      "io.github.embeddedkafka" %% "embedded-kafka"         % spark.embeddedKafkaVersion % Test,
+      "io.github.embeddedkafka" %% "embedded-kafka-streams" % spark.embeddedKafkaVersion % Test
+    ),
+    Test / baseDirectory := (ThisBuild / baseDirectory).value // <-- fix CWD for forked JVM
   )
   .dependsOn(core, testutils % Test)
+
+// ── Conditionally-included modules (some connectors don't support all Spark versions) ──
 
 lazy val snowflake = (project in file("snowflake"))
   .settings(
     commonSettings,
     name := "dataio-snowflake",
-    libraryDependencies ++= Seq(
-      "net.snowflake" %% "spark-snowflake" % f"3.1.1"
-    )
+    libraryDependencies ++= spark.sparkSnowflakeVersion.toSeq.map { v =>
+      "net.snowflake" %% "spark-snowflake" % v
+    },
+    // If the connector is unavailable for this profile, skip publishing an empty JAR
+    publish / skip := !spark.supportsSnowflake,
+    Test / baseDirectory := (ThisBuild / baseDirectory).value // <-- fix CWD for forked JVM
   )
   .dependsOn(core, testutils % Test)
 
@@ -149,16 +183,19 @@ lazy val elasticsearch = (project in file("elasticsearch"))
   .settings(
     commonSettings,
     name := "dataio-elasticsearch",
-    libraryDependencies ++= Seq(
-      "org.elasticsearch" %% "elasticsearch-spark-30" % "8.17.4"
-        exclude ("org.scala-lang", "scala-library")
-        exclude ("org.scala-lang", "scala-reflect")
-        exclude ("org.slf4j", "slf4j-api")
-        exclude ("org.apache.spark", "spark-core_" + scalaVersion.value.substring(0, 4))
-        exclude ("org.apache.spark", "spark-sql_" + scalaVersion.value.substring(0, 4))
-        exclude ("org.apache.spark", "spark-catalyst_" + scalaVersion.value.substring(0, 4))
-        exclude ("org.apache.spark", "spark-streaming_" + scalaVersion.value.substring(0, 4))
-    )
+    libraryDependencies ++= spark.elasticsearchSparkVersion.toSeq.map { v =>
+      "org.elasticsearch" %% "elasticsearch-spark-30" % v exclude
+        ("org.scala-lang", "scala-library") exclude
+        ("org.scala-lang", "scala-reflect") exclude
+        ("org.slf4j", "slf4j-api") exclude
+        ("org.apache.spark", s"spark-core_${spark.scalaBinaryVersion}") exclude
+        ("org.apache.spark", s"spark-sql_${spark.scalaBinaryVersion}") exclude
+        ("org.apache.spark", s"spark-catalyst_${spark.scalaBinaryVersion}") exclude
+        ("org.apache.spark", s"spark-streaming_${spark.scalaBinaryVersion}")
+    },
+    // If the connector is unavailable for this profile, skip publishing an empty JAR
+    publish / skip := !spark.supportsElasticsearch,
+    Test / baseDirectory := (ThisBuild / baseDirectory).value // <-- fix CWD for forked JVM
   )
   .dependsOn(core, testutils % Test)
 
@@ -167,16 +204,26 @@ lazy val test = (project in file("test"))
     commonSettings,
     name := "dataio-test",
     libraryDependencies ++= Seq(
-      "org.scalatest" %% "scalatest" % scalatestVersion,
-      "org.scalamock" %% "scalamock" % scalamockVersion
-    )
+      "org.scalatest" %% "scalatest" % spark.scalatestVersion,
+      "org.scalamock" %% "scalamock" % spark.scalamockVersion
+    ),
+    Test / baseDirectory := (ThisBuild / baseDirectory).value // <-- fix CWD for forked JVM
   )
   .dependsOn(core, testutils % Test)
 
-// Projects configuration
+// ════════════════════════════════════════════════════════════════════════════
+//  ROOT AGGREGATE — dynamically includes only modules available for this profile
+// ════════════════════════════════════════════════════════════════════════════
+
+lazy val alwaysModules: Seq[ProjectReference] = Seq(core, test, kafka)
+
+lazy val conditionalModules: Seq[ProjectReference] =
+  (if (spark.supportsSnowflake) Seq[ProjectReference](snowflake) else Nil) ++
+    (if (spark.supportsElasticsearch) Seq[ProjectReference](elasticsearch) else Nil)
+
 lazy val root = (project in file("."))
   .settings(
     name := "dataio",
     publish / skip := true
   )
-  .aggregate(core, test, kafka, snowflake)
+  .aggregate(alwaysModules ++ conditionalModules: _*)
